css/base.css
 /* =========================
   1. RESET / BASE
========================= */

html {
  overflow-y: scroll;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

:root{

  --panea-blue:#0d2e40;

  --panea-yellow:#fdc103;

  --panea-white:#f5f7fa;

  --panea-text:
    rgba(255,255,255,.82);

  --panea-text-soft:
    rgba(255,255,255,.58);

  --panea-border:
    rgba(255,255,255,.06);

  --panea-card:
    rgba(255,255,255,.04);

  --container-width: 1100px;

  --transition: .25s ease;
}


*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

img {
  max-width: 100%;
  display: block;
}

ul,
ol {
  list-style: none;
}

button{
border:none;
cursor:pointer;
font:inherit;
transition:.25s ease;
}

.container {
  width: min(90%, 1100px);
  margin: 0 auto;
}

input{

  background:
    rgba(255,255,255,.08);

  border:
    1px solid rgba(255,255,255,.15);

  color:#f5efe6;

}

input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus{

  -webkit-text-fill-color:
    #f5efe6;

  -webkit-box-shadow:
    0 0 0px 1000px
    rgba(255,255,255,.08)
    inset;

  transition:
    background-color 9999s ease-in-out 0s;

}

.no-break{
  white-space: nowrap;
}


/* =========================
   3. TYPOGRAPHY
========================= */

body {
  font-family: 'Inter', sans-serif;
  background: var(--panea-blue);
  color: var(--panea-text);
}

h1,
h2,
h3,
h4 {
  font-family: 'Playfair Display', serif;
  color: var(--panea-white);
}

h1 {
line-height:1.05;
  letter-spacing: 1px;
}

h2 {
  font-size: 28px;
}

p {
  font-size: 16px;
  line-height: 1.6;
}

a {
  text-decoration: none;
  color: var(--panea-text);
}

a{
transition:.2s ease;
}

/* =========================
   FOOTER SEPARATOR
========================= */

.credits{

  position: relative;

  margin-top: 120px;

  padding-top: 80px;

}

.credits::before{

  content:"";

  position:absolute;

  top:0;
  left:50%;

  transform:translateX(-50%);

  width:min(900px, 82%);

  height:1px;

  background:
    linear-gradient(
      90deg,
      transparent 0%,
      rgba(243,201,77,.18) 15%,
      rgba(255,255,255,.22) 50%,
      rgba(243,201,77,.18) 85%,
      transparent 100%
    );

}

.newsletter{

  padding:70px 0 120px;

}

/* =========================
   HEADER DESKTOP
========================= */

.header-inner{

  display:flex;

  align-items:center;

  justify-content:space-between;

}

.logo-block{

  display:flex;

  flex-direction:column;

  align-items:center;

  text-align:center;

  overflow:visible;

}

.logo{

 display:block !important;

  text-align:center !important;

  line-height:.9 !important;

  margin-bottom:6px !important;

}

.logo-subtitle{

  font-size:.62rem;

  letter-spacing:.12em;

  margin-top:-6px;

  margin-left:6px;

  line-height:1.5;

  text-align:center;

  white-space:normal;

}

